<resources>
    <string name="app_name">HealthKitSuperDemo</string>
    <string name="data_controller">Data Controller</string>
    <string name="sensors_controller">Sensors Controller</string>

    <string name="weight">Update Weight</string>
    <string name="enter_weight">weight</string>
    <string name="update">Update</string>
    <string name="weight_str">Weight</string>
    <string name="enter_height">height</string>
    <string name="insert">Insert</string>
    <string name="enter_step">step</string>
    <string name="read">Read</string>
    <string name="delete">Delete</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="receiver">Receiver</string>
    <string name="sync">Sync Data</string>
    <string name="clear_cloud">Clear Cloud</string>
    <string name="get_sensor_controller">Get Sensor Controller</string>
    <string name="register_steps">Register Steps</string>
    <string name="unregister_steps">Unregister Steps</string>
    <string name="scan_heart_rate_devices">Scan Heart Rate Devices</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="save_heart_rate_device">Save Heart Rate Device</string>
    <string name="list_matched_devices">List Matched Devices</string>
    <string name="find_data_collectors">Find Data Collectors</string>
    <string name="remove_heart_rate_device">Remove Heart Rate Device</string>
    <string name="register_heart_rate">Register Heart Rate</string>
    <string name="unregister_heart_rate">Unregister Heart Rate</string>
    <string name="auto_recorder">Auto Recorder</string>
    <string name="start_record_data_type">Start Record by Data Type</string>
    <string name="stop_record_data_type">Stop Record by Data Type</string>
    <string name="start_record_data_controller">Start Record by Data Collector</string>
    <string name="stop_record_data_controller">Stop Record by Data Collector</string>
    <string name="stop_record_by_record">Stop Record by Record</string>
    <string name="get_all_records">Get All Records</string>
    <string name="get_records_data_type">Get Records By Data Type</string>
    <string name="activity_records">Activity Records</string>
    <string name="begin_activity_record">Begin activity record</string>
    <string name="end_activity_record">End activity record</string>
    <string name="add_activity_record">Add activity record</string>
    <string name="get_activity_record">Get activity record</string>
    <string name="add_activity_record_monitor">Add activity record monitor</string>
    <string name="remove_activity_records">Remove Activity Records</string>
    <string name="delete_activity_record">Delete Activity Record</string>
</resources>
