<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            app:title="@string/data_controller"
            app:titleTextColor="@color/white"
            app:theme="@style/ToolbarTheme"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/startTimeEditText"
                    android:inputType="number"
                    android:hint="@string/start_time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/endTimeEditText"
                    android:inputType="number"
                    android:hint="@string/end_time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:enabled="true"
                    android:background="@drawable/rounded_edittext"
                    android:minHeight="50dp"
                    android:textSize="16sp"
                    android:selectAllOnFocus="true" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/weightEditText"
                android:inputType="number"
                android:hint="@string/enter_weight"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/heightEditText"
                android:inputType="number"
                android:hint="@string/enter_height"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/stepsEditText"
                android:inputType="number"
                android:hint="@string/enter_step"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:enabled="true"
                android:background="@drawable/rounded_edittext"
                android:minHeight="50dp"
                android:textSize="16sp"
                android:selectAllOnFocus="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/insertBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/insert"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/readBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/read"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/updateBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/delete"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/registerListenerBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/receiver"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/syncBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/sync"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clearCloudBtn"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/clear_cloud"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>