<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            app:title="@string/activity_records"
            app:titleTextColor="@color/white"
            app:theme="@style/ToolbarTheme"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:orientation="vertical"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/beginActivityRecordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/begin_activity_record"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/endActivityRecordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/end_activity_record"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addActivityRecordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_activity_record"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/getActivityRecordBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/get_activity_record"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addActivityRecordsMonitorBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/add_activity_record_monitor"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/removeActivityRecordsMonitor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/remove_activity_records"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteActivityRecord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/delete_activity_record"
                    android:textColor="@android:color/white"
                    android:gravity="center_vertical|center_horizontal"
                    style="?android:attr/borderlessButtonStyle"
                    android:background="@drawable/update_button_bg"/>

                <TextView
                    android:id="@+id/autoRecorderLogInfoTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textview_border"
                    android:padding="5dp"
                    android:textSize="14dp"
                    android:text="print：\n"
                    android:scrollbars="vertical"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>